[gd_scene load_steps=15 format=3 uid="uid://dsupxmu60unp"]

[ext_resource type="PackedScene" uid="uid://6qdcjvv18u6n" path="res://scenes/components/hitbox_component/hitbox_component.tscn" id="1_6dkap"]
[ext_resource type="Script" uid="uid://4odvox6ec3ys" path="res://scenes/entities/cube/laser_explosion.gd" id="1_c0f07"]
[ext_resource type="Texture2D" uid="uid://bnei4qemmv2na" path="res://assets/cube/laser_explosion.png" id="2_andry"]
[ext_resource type="PackedScene" uid="uid://d4k3lhqnbbccm" path="res://scenes/components/modify_aggro_component/modify_aggro_component.tscn" id="4_or0vd"]
[ext_resource type="PackedScene" uid="uid://drmf4vtr4nr1e" path="res://scenes/components/stunbox_component/stunbox_component.tscn" id="4_xa7j6"]
[ext_resource type="Script" uid="uid://ml2xn2cusx8n" path="res://scenes/components/modify_aggro_component/modify_aggro_component.gd" id="5_p71br"]
[ext_resource type="PackedScene" uid="uid://cfjnx3fg20dbm" path="res://scenes/components/random_audio_stream_player/random_audio_stream_player_2d.tscn" id="5_tguh7"]
[ext_resource type="AudioStream" uid="uid://beld4wisbwsyt" path="res://assets/sfx/explosion2.wav" id="6_a8eeb"]
[ext_resource type="AudioStream" uid="uid://b31okbafyp3o5" path="res://assets/sfx/explosion.wav" id="7_7fduh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4hhtg"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3nu15"]
radius = 16.0

[sub_resource type="Animation" id="Animation_17etm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bfww6"]
length = 0.4
step = 0.0444
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0444, 0.0888, 0.1332, 0.1776, 0.222, 0.2664, 0.3108, 0.3552),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0888, 0.3996),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0888, 0.3996),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mmjpm"]
_data = {
&"RESET": SubResource("Animation_17etm"),
&"default": SubResource("Animation_bfww6")
}

[node name="LaserExplosion" type="Node2D"]
script = ExtResource("1_c0f07")

[node name="HitboxComponent" parent="." instance=ExtResource("1_6dkap")]
visible = false
damage = 5

[node name="HitboxCollisionShape" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_4hhtg")

[node name="StunboxComponent" parent="." instance=ExtResource("4_xa7j6")]
visible = false

[node name="StunboxCollisionShape" type="CollisionShape2D" parent="StunboxComponent"]
shape = SubResource("CircleShape2D_3nu15")

[node name="ModifyAggroComponent" parent="." instance=ExtResource("4_or0vd")]
script = ExtResource("5_p71br")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModifyAggroComponent"]
shape = SubResource("CircleShape2D_3nu15")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_andry")
hframes = 3
vframes = 3
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/cube",
"o_name": "",
"only_visible": false,
"player": "HitboxComponent/AnimationPlayer",
"slice": "",
"source": "res://assets/cube/laser_explosion.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HitboxComponent")
libraries = {
"": SubResource("AnimationLibrary_mmjpm")
}
autoplay = "default"

[node name="RandomAudioStreamPlayer2D" parent="." instance=ExtResource("5_tguh7")]
streams = Array[AudioStream]([ExtResource("6_a8eeb"), ExtResource("7_7fduh")])
